samples/_failures_safe/1761612215_abef3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30806fcf.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_30806fcf.c:182:9: error: expected expression at end of input
  182 |         } else
      |         ^
./samples/SAFE/__tmp_30806fcf.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30806fcf.c:182:9: error: expected declaration or statement at end of input
